[gd_scene load_steps=2 format=3 uid="uid://cxtimeline_scrubber"]

[ext_resource type="Script" path="res://scripts/match_pipeline/MatchTimelineScrubber.gd" id="1_script"]

[node name="MatchTimelineScrubber" type="Control"]
custom_minimum_size = Vector2(400, 40)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
script = ExtResource("1_script")
use_autoload = true
speed_options = PackedFloat32Array(0.25, 0.5, 1.0, 2.0, 4.0, 8.0)
default_speed_index = 2

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="PlayPauseButton" type="Button" parent="HBox"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Play"

[node name="TimeSlider" type="HSlider" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.0
max_value = 1.0
step = 0.001
value = 0.0

[node name="SpeedButton" type="Button" parent="HBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "1.0x"

[node name="TimeLabel" type="Label" parent="HBox"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "00:00 / 00:00"
horizontal_alignment = 2
